--- a/donate3.html
+++ b/donate3.html
@@ -58,6 +58,9 @@
             <a class="nav-link" href="modules.html">Modules</a>
           </li>
           <li class="nav-item-test">
+            <a class="nav-link" href="team.html">Team</a>
+          </li>
+          <li class="nav-item-test">
             <a class="nav-link" href="for_educators.html">For Educators</a>
           </li>
           <li class="nav-item-test">
@@ -95,7 +98,7 @@
       <!-- Top Content Row -->
       <div class="row paddedRow align-items-center">
         <div id="donate_graphic" class="col-md-5">
-          <img id="donate_img_1" src="img/donate_2.svg" alt="">
+          <img id="donate_img_1" src="img/donate_5.svg" alt="">
         </div>
         <div id="intro" class="col-md-7">
           <h1>
@@ -129,10 +132,7 @@
     <div class="container-fluid">
       <div class="row align-items-center footerRow">
         <div class="col-auto mr-auto">
-          <p class="footerLeftItem">Copyright &copy 2020 Social Media TestDrive</p>
-        </div>
-        <div class="col-auto">
-          <a href="team.html" class="footer-link">Team</a>
+          <p class="footerLeftItem">Copyright &copy 2021 Social Media TestDrive</p>
         </div>
         <div class="col-auto">
           <a href="press.html" class="footer-link">Press</a>
