--- a/for_parents2.html
+++ b/for_parents2.html
@@ -89,9 +89,16 @@
           themselves, but we encourage parents to try out and discuss Social Media TestDrive
           with their children.
         </h4>
-        <a href="/modules.html">
-          <button type="button" class="nicelyRoundedButton">
+        <a href="/modules.html" style="text-decoration:none;">
+          <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
             Try it out
+          </button>
+        </a>
+        <a 
+          href="https://www.youtube.com/watch?v=cWiI5s2bVws&ab_channel=SocialMediaTestDrive" target="_none" 
+          style="text-decoration:none;" >
+          <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
+            View informational video
           </button>
         </a>
       </div>
@@ -118,7 +125,31 @@
 
     <!-- Content Row 3 -->
     <div class="row align-items-center paddedRow">
-      <div class="col-md-6">
+      <div class='col-md-6 order-1 order-md-1'>
+        <h1> Learn, explore, and reflect on key concepts </h1>
+        <h4>
+          Each Social Media TestDrive module has four key sections: Tutorial, Guided activity, Free play, and Reflection. This design gives young people the opportunity to learn, explore, and reflect on key social media concepts, definitions, and prosocial behaviors. 
+        </h4>  
+        <h4>
+          Watch this 
+          <a href="https://www.youtube.com/watch?v=cWiI5s2bVws&ab_channel=SocialMediaTestDrive" target="_none"> video</a> co-created with Common Sense Education to learn more about the Social Media TestDrive platform and modules.
+        </h4>
+      </div>
+      <div class="col-md-6 order-2 order-md-2">
+        <video class="smtd_vid" controls>
+          <source src="img/smtd_pdvideo_short.mp4" type="video/mp4">
+          <source src="img/smtd_pdvideo_short.ogg" type="video/ogg">
+          Your browser does not support the video element. Kindly update it to latest version.
+        </video>
+      </div>
+    </div>
+
+    <!-- Content Row 4 -->
+    <div class="row align-items-center paddedRow">
+      <div class='col-md-6 order-2 order-md-1'>
+        <img class="parents_3" src="img/parents_3.png" alt="">
+      </div>
+      <div class="col-md-6 order-1 order-md-2">
         <h1>We care about your child’s privacy</h1>
         <h4> Social Media TestDrive <strong>does not collect or store</strong> any personal information.
           Young people are able to create a profile,  but all data is
@@ -131,10 +162,6 @@
             privacy policy</a>
           for more details.
         </h4>
-
-      </div>
-      <div class='col-md-6'>
-        <img class="parents_3" src="img/parents_3.png" alt="">
       </div>
     </div>
 
