--- a/research.html
+++ b/research.html
@@ -57,6 +57,9 @@
             <a class="nav-link" href="modules.html">Modules</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="team.html">Team</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="for_educators.html">For Educators</a>
           </li>
           <li class="nav-item">
@@ -159,10 +162,7 @@
     <div class="container-fluid">
       <div class="row align-items-center footerRow">
         <div class="col-auto mr-auto">
-          <p class="footerLeftItem">Copyright &copy 2020 Social Media TestDrive</p>
-        </div>
-        <div class="col-auto">
-          <a href="team.html" class="footer-link">Team</a>
+          <p class="footerLeftItem">Copyright &copy 2021 Social Media TestDrive</p>
         </div>
         <div class="col-auto">
           <a href="press.html" class="footer-link">Press</a>
