--- a/webinars2.html
+++ b/webinars2.html
@@ -79,6 +79,7 @@
   </header>
 
   <main>
+    <!-- TestDrive WEBINARS -->
     <div class='container-fluid'>
       <div class='row justify-content-center footerPageTitle'>
         <div class='col-12 text-center'>
@@ -202,6 +203,41 @@
         </div>
       </div>
     </div>
+
+    <!-- TestDrive VIDEOS -->
+    <div class='container-fluid'>
+      <div class='row justify-content-center footerPageTitle'>
+        <div class='col-12 text-center'>
+          <h1>TestDrive Videos</h1>
+        </div>
+      </div>
+
+      <!-- PD Video -->
+      <div class='row justify-content-center pressItemContainer'>
+        <div class='col-lg-12 pressLeftContainer align-items-center'>
+          <h3 class="pressText" id='webinarTitle1'>
+            Social Media TestDrive: An Introduction to the Platform and Modules
+          </h3>
+          <p class="pressText">
+            Presented by <a href="https://www.commonsense.org/education/?utm_source=edWeb&utm_medium=Banner&utm_campaign=June_Webinar_Banner" target="_none">Common Sense Education</a>
+          </p>
+          <a href="https://www.youtube.com/watch?v=4r9-moKGa84&ab_channel=SocialMediaTestDrive" target="_none" style="text-decoration:none;" >
+            <button type="button" class="nicelyRoundedButton webinarButton">
+              Watch the Video 
+            </button>
+          </a>
+         
+          <p class="pressText">
+            In this short informational video, you will be introduced to Social Media TestDrive's platform and modules.
+          </p>
+          <p class="pressText">
+            Social Media TestDrive is an educational tool created by researchers from Cornell University’s Social Media Lab in collaboration with Common Sense Education. Social Media TestDrive teaches key concepts of digital citizenship and allows young people to navigate, in a safe virtual environment, realistic scenarios and dilemmas they might encounter as users of social media.  
+          </p>
+          <p class="pressText">
+            A Social Media TestDrive module is a self-guided activity, taking about 20-30 minutes to complete. Each module consists of four key sections: Tutorial, Guided activity, Free play, and Reflection. The design of these sections teach, engage, and prompt students to reflect on the social media concepts, definitions, and prosocial behavior they learn in the module. 
+          </p>
+        </div>
+      </div>
   </main>
 
   <footer class="page-footer footerVerB">
