--- a/for_parents2.html
+++ b/for_parents2.html
@@ -136,11 +136,12 @@
         </h4>
       </div>
       <div class="col-md-6 order-2 order-md-2">
-        <video class="smtd_vid" controls>
+        <!-- <video class="smtd_vid" controls>
           <source src="img/smtd_pdvideo_short.mp4" type="video/mp4">
           <source src="img/smtd_pdvideo_short.ogg" type="video/ogg">
           Your browser does not support the video element. Kindly update it to latest version.
-        </video>
+        </video> -->
+        <iframe width="100%" height="361" src="https://www.youtube.com/embed/cWiI5s2bVws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
