--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
       <!-- Item -->
       <div class='row researchRow'>
         <h3 class="researchSectionTitle">
-          April 2021 - October 2021: Knowledge outcome evaluation study
+          Fall 2021: Knowledge outcome evaluation study
         </h3>
         <br>
         <p class="researchParagraph">
