bolded video word

--- a/for_parents2.html
+++ b/for_parents2.html
@@ -128,8 +128,8 @@
           Each Social Media TestDrive module has four key sections: Tutorial, Guided activity, Free play, and Reflection. This design gives young people the opportunity to learn, explore, and reflect on key social media concepts, definitions, and prosocial behaviors. 
         </h4>  
         <h4>
-          Watch this 
-          <a href="https://www.youtube.com/watch?v=4r9-moKGa84&ab_channel=SocialMediaTestDrive" target="_none"> video</a> created by Common Sense Education to learn more about the Social Media TestDrive platform and modules.
+          Watch this <b>
+          <a href="https://www.youtube.com/watch?v=4r9-moKGa84&ab_channel=SocialMediaTestDrive" target="_none"> video</a></b> created by Common Sense Education to learn more about the Social Media TestDrive platform and modules.
         </h4>
       </div>
       <div class="col-md-6 order-2 order-md-2">
@@ -138,6 +138,7 @@
           <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
           Your browser does not support the video element. Kindly update it to latest version.
         </video>
+        <!-- <p class="smtd_vid_caption"> Click to watch video</p> -->
         <!-- <iframe width="100%" height="361" src="https://www.youtube.com/embed/cWiI5s2bVws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
       </div>
     </div>
