changed spacing on landing page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </header>
 
   <main>
-    <div class="section1 container-fluid">
+    <div class="container-fluid">
 
       <!-- Temporary advertisement for webinar -->
       <!-- <div class="row align-items-center webinarBanner">
@@ -261,7 +261,7 @@
     <!-- Join List-serv Section -->
     <div class="container-fluid">
       <!-- Title -->
-      <div class="row paddedTop justify-content-center">
+      <div class="row justify-content-center">
         <div class="col text-center">
           <h1> Want to find out more? </h1>
         </div>
