final changes to for parents and webinars page; minor edit to research page

--- a/research.html
+++ b/research.html
@@ -116,7 +116,7 @@
       <!-- Item -->
       <div class='row researchRow'>
         <h3 class="researchSectionTitle">
-          Fall 2021: Knowledge outcome evaluation study
+          Fall 2021: Knowledge Outcome Evaluation study
         </h3>
         <br>
         <p class="researchParagraph">
@@ -135,7 +135,7 @@
       <!-- Item -->
       <div class='row researchRow'>
         <h3 class="researchSectionTitle">
-          July 2021 - December 2021: Youth Tech Safety
+          November 2021 - February 2022: Youth Tech Safety study
         </h3>
         <br>
         <p class="researchParagraph">
@@ -148,8 +148,8 @@
           <a href="youth_and_digital_harms_research_opp_educators.pdf?v=2" target="_none" class="customHyperlink">
             please click here</a>,
           or email us at
-          <a href="mailto:Parentproject@cornell.edu" target="_top" class="customHyperlink">
-            Parentproject@cornell.edu</a>.
+          <a href="mailto:techsafety@cornell.eduu" target="_top" class="customHyperlink">
+            techsafety@cornell.edu</a>.
         </p>
       </div>
     </div>
