--- a/for_parents.html
+++ b/for_parents.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <html lang='en'>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/forparents.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
@@ -22,11 +24,11 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-145467622-3');
+    gtag('config', 'UA-145467622-3');
   </script>
   <title>TestDrive for Parents</title>
 </head>
@@ -35,17 +37,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html" class="logoLinkContainer">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px"
-        class="d-inline-block align-top testDriveLogo"
-        alt="Social Media TestDrive Logo">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo"
+          alt="Social Media TestDrive Logo">
         <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
         </span>
       </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -75,133 +75,166 @@
   </header>
 
   <main>
-  <div class='container-fluid'>
+    <div class='container-fluid'>
 
-    <!-- Content Row 1 -->
-    <div class="row align-items-center paddedRow">
-      <div class="col-md-6">
-        <h1>Take your children on a “Test Drive” for social media</h1>
-        <h4>
-          Social Media TestDrive modules are designed so that youth can complete them by
-          themselves, but we encourage parents to try out and discuss Social Media TestDrive
-          with their children.
-        </h4>
-        <a href="/modules.html">
-          <button type="button" class="nicelyRoundedButton">
-            Try it out
+      <!-- Content Row 1 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <h1>Take your children on a “Test Drive” for social media</h1>
+          <h4>
+            Social Media TestDrive modules are designed so that youth can complete them by
+            themselves, but we encourage parents to try out and discuss Social Media TestDrive
+            with their children.
+          </h4>
+          <a href="/modules.html" style="text-decoration:none;">
+            <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
+              Try it out
+            </button>
+          </a>
+          <!-- <a 
+          href="https://www.youtube.com/watch?v=cWiI5s2bVws&ab_channel=SocialMediaTestDrive" target="_none" 
+          style="text-decoration:none;" >
+          <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
+            View informational video
           </button>
-        </a>
-      </div>
-      <div class='col-md-6'>
-        <img class="educators_image" src="img/parents_1.svg" alt="">
-      </div>
-    </div>
-
-    <!-- Content Row 2 -->
-    <div class="row align-items-center paddedRow">
-      <div class="col-md-6 order-2 order-md-1">
-        <img class="parents_2" src="img/parents_2.png" alt="">
-      </div>
-      <div class='col-md-6 order-1 order-md-2'>
-        <h1>Teach your children about social media, risk-free</h1>
-        <h4>
-          Each Social Media TestDrive module teaches a set of digital citizenship concepts
-          within a safe and protected platform. Young people can practice
-          important social media skills without worrying about negative
-          consequences.
-        </h4>
-      </div>
-    </div>
-
-    <!-- Content Row 3 -->
-    <div class="row align-items-center paddedRow">
-      <div class="col-md-6">
-        <h1>We care about your child’s privacy</h1>
-        <h4> Social Media TestDrive <strong>does not collect or store</strong> any personal information.
-          Young people are able to create a profile,  but all data is
-          permanently deleted once users finish a module or leave the
-          Social Media TestDrive website.
-        </h4>
-        <h4>
-          We take privacy and safety seriously; see our
-          <a href="https://app.socialmediatestdrive.org/privacy" target="_none">
-            privacy policy</a>
-          for more details.
-        </h4>
-
-      </div>
-      <div class='col-md-6'>
-        <img class="parents_4" src="img/parents_4.png" alt="">
-      </div>
-    </div>
-
-    <!-- Got More Questions Section -->
-    <div class="container-fluid">
-      <!-- Title -->
-      <div class="row justify-content-center">
-        <div class="col text-center">
-          <h1> Do you have more questions? </h1>
+        </a> -->
+        </div>
+        <div class='col-md-6'>
+          <img class="educators_image" src="img/parents_1.svg" alt="">
         </div>
       </div>
 
-      <!-- Subtext -->
-      <div class="row justify-content-center">
-        <div class="col-sm-8 col-md-8 col-lg-4 text-center">
+      <!-- Content Row 2 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="parents_2" src="img/parents_2.png" alt="">
+        </div>
+        <div class='col-md-6 order-1 order-md-2'>
+          <h1>Teach your children about social media, risk-free</h1>
           <h4>
-            Check out our <a href="/faq.html">FAQ</a> for more details about how
-            parents and guardians can use Social Media TestDrive, or contact us using the
-            e-mail below.
+            Each Social Media TestDrive module teaches a set of digital citizenship concepts
+            within a safe and protected platform. Young people can practice
+            important social media skills without worrying about negative
+            consequences.
           </h4>
         </div>
       </div>
 
-      <!-- Button -->
-      <div class="row addPaddingBottom justify-content-center">
-        <div class="col d-flex justify-content-center">
-          <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
-            <button type="button" class="nicelyRoundedButton">
-              Contact us
-            </button>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Join List-serv Section -->
-    <div class="container-fluid">
-      <!-- Title -->
-      <div class="row paddedTop justify-content-center">
-        <div class="col text-center">
-          <h1> Want to find out more? </h1>
-        </div>
-      </div>
-
-      <!-- Subtext -->
-      <div class="row justify-content-center">
-        <div class="col-sm-8 col-md-8 col-lg-4 text-center">
-          <h4 class="listServSubtext">
-            You can join our e-mail listserv to hear the latest news about
-            Social Media TestDrive.
+      <!-- Content Row 3 -->
+      <div class="row align-items-center paddedRow">
+        <div class='col-md-6 order-1 order-md-1'>
+          <h1> Learn, explore, and reflect on key concepts </h1>
+          <h4>
+            Each Social Media TestDrive module has four key sections: Tutorial, Guided activity, Free play, and
+            Reflection. This design gives young people the opportunity to learn, explore, and reflect on key social
+            media concepts, definitions, and prosocial behaviors.
           </h4>
           <h4>
-            Click the button below and press "Send" to join.
+            Watch this <b>
+              <a href="https://www.youtube.com/watch?v=4r9-moKGa84&ab_channel=SocialMediaTestDrive" target="_none">
+                video</a></b> created by Common Sense Education to learn more about the Social Media TestDrive platform
+            and modules.
+          </h4>
+        </div>
+        <div class="col-md-6 order-2 order-md-2">
+          <video class="smtd_vid" controls poster="img/parents_3.png" preload="none">
+            <source src="img/smtd_pdvideo_long.mp4" type="video/mp4">
+            <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
+            Your browser does not support the video element. Kindly update it to latest version.
+          </video>
+          <!-- <p class="smtd_vid_caption"> Click to watch video</p> -->
+          <!-- <iframe width="100%" height="361" src="https://www.youtube.com/embed/cWiI5s2bVws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        </div>
+      </div>
+
+      <!-- Content Row 4 -->
+      <div class="row align-items-center paddedRow">
+        <div class='col-md-6 order-2 order-md-1'>
+          <img class="parents_4" src="img/parents_4.png" alt="">
+        </div>
+        <div class="col-md-6 order-1 order-md-2">
+          <h1>We care about your child’s privacy</h1>
+          <h4> Social Media TestDrive <strong>does not collect or store</strong> any personal information.
+            Young people are able to create a profile, but all data is
+            permanently deleted once users finish a module or leave the
+            Social Media TestDrive website.
+          </h4>
+          <h4>
+            We take privacy and safety seriously; see our
+            <a href="https://app.socialmediatestdrive.org/privacy" target="_none">
+              privacy policy</a>
+            for more details.
           </h4>
         </div>
       </div>
 
-      <!-- Join List-serv Button -->
-      <div class="row addPaddingBottom justify-content-center">
-        <div class="col d-flex justify-content-center">
-          <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top"  class="customHyperlink">
-            <button type="button" class="nicelyRoundedButton">
-              Sign up
-            </button>
-          </a>
+      <!-- Got More Questions Section -->
+      <div class="container-fluid">
+        <!-- Title -->
+        <div class="row justify-content-center">
+          <div class="col text-center">
+            <h1> Do you have more questions? </h1>
+          </div>
+        </div>
+
+        <!-- Subtext -->
+        <div class="row justify-content-center">
+          <div class="col-sm-8 col-md-8 col-lg-4 text-center">
+            <h4>
+              Check out our <a href="/faq.html">FAQ</a> for more details about how
+              parents and guardians can use Social Media TestDrive, or contact us using the
+              e-mail below.
+            </h4>
+          </div>
+        </div>
+
+        <!-- Button -->
+        <div class="row addPaddingBottom justify-content-center">
+          <div class="col d-flex justify-content-center">
+            <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+              <button type="button" class="nicelyRoundedButton">
+                Contact us
+              </button>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
 
-  </div>
+      <!-- Join List-serv Section -->
+      <div class="container-fluid">
+        <!-- Title -->
+        <div class="row paddedTop justify-content-center">
+          <div class="col text-center">
+            <h1> Want to find out more? </h1>
+          </div>
+        </div>
+
+        <!-- Subtext -->
+        <div class="row justify-content-center">
+          <div class="col-sm-8 col-md-8 col-lg-4 text-center">
+            <h4 class="listServSubtext">
+              You can join our e-mail listserv to hear the latest news about
+              Social Media TestDrive.
+            </h4>
+            <h4>
+              Click the button below and press "Send" to join.
+            </h4>
+          </div>
+        </div>
+
+        <!-- Join List-serv Button -->
+        <div class="row addPaddingBottom justify-content-center">
+          <div class="col d-flex justify-content-center">
+            <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top" class="customHyperlink">
+              <button type="button" class="nicelyRoundedButton">
+                Sign up
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </main>
 
   <footer class="page-footer footerVerB">
@@ -231,8 +264,15 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
