--- a/webinars.html
+++ b/webinars.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <html lang='en'>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
@@ -23,11 +25,11 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-145467622-3');
+    gtag('config', 'UA-145467622-3');
   </script>
   <title>TestDrive Webinars</title>
 </head>
@@ -36,17 +38,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html" class="logoLinkContainer">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px"
-        class="d-inline-block align-top testDriveLogo"
-        alt="Social Media TestDrive Logo">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo"
+          alt="Social Media TestDrive Logo">
         <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
         </span>
       </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,15 +76,56 @@
   </header>
 
   <main>
+    <!-- TestDrive VIDEOS -->
     <div class='container-fluid'>
       <div class='row justify-content-center footerPageTitle'>
         <div class='col-12 text-center'>
-          <h1>TestDrive Webinars</h1>
+          <h1>Welcome to TestDrive</h1>
         </div>
       </div>
 
-      <!-- CS -->
+      <!-- PD Video -->
       <div class='row justify-content-center pressItemContainer'>
+        <div class='col-lg-12 pressLeftContainer align-items-center'>
+          <h3 class="pressText" id='webinarTitle1'>
+            Social Media TestDrive: An Introduction to the Platform and Modules
+          </h3>
+          <a href="https://www.youtube.com/watch?v=4r9-moKGa84&ab_channel=SocialMediaTestDrive" target="_none"
+            style="text-decoration:none;">
+            <button type="button" class="nicelyRoundedButton webinarButton">
+              Watch the Video
+            </button>
+          </a>
+
+          <p class="pressText">
+            In this short informational video, created by Common Sense Education, you will be introduced to Social Media
+            TestDrive's platform and modules.
+          </p>
+          <p class="pressText">
+            Social Media TestDrive is an educational tool created by researchers from Cornell University’s Social Media
+            Lab in collaboration with Common Sense Education. Social Media TestDrive teaches key concepts of digital
+            citizenship and allows young people to navigate, in a safe virtual environment, realistic scenarios and
+            dilemmas they might encounter as users of social media.
+          </p>
+          <p class="pressText">
+            A Social Media TestDrive module is a self-guided activity, taking about 20-30 minutes to complete. Each
+            module consists of four key sections: Tutorial, Guided activity, Free play, and Reflection. The design of
+            these sections teach, engage, and prompt students to reflect on the social media concepts, definitions, and
+            prosocial behavior they learn in the module.
+          </p>
+        </div>
+      </div>
+
+      <!-- TestDrive WEBINARS -->
+      <div class='container-fluid'>
+        <div class='row justify-content-center footerPageTitle'>
+          <div class='col-12 text-center'>
+            <h1>TestDrive Webinars</h1>
+          </div>
+        </div>
+
+        <!-- CS -->
+        <div class='row justify-content-center pressItemContainer'>
           <div class='col-lg-7 pressLeftContainer align-items-center'>
             <h3 class="pressText" id='webinarTitle2'>
               Helping Kids Use Social Media Responsibly: An Educator’s Guide to “Social Media TestDrive”
@@ -98,15 +139,19 @@
               Hosted by Jennifer Ehehalt, Sr. Regional Manager, Common Sense Education
             </p>
             <p class="pressText">
-              Sponsored by <a href="https://www.commonsense.org/education/?utm_source=edWeb&utm_medium=Banner&utm_campaign=June_Webinar_Banner" target="_none">Common Sense Education</a>
+              Sponsored by <a
+                href="https://www.commonsense.org/education/?utm_source=edWeb&utm_medium=Banner&utm_campaign=June_Webinar_Banner"
+                target="_none">Common Sense Education</a>
             </p>
-            <a id='webinarLink2' aria-labelledby='webinarLink2 webinarTitle2' target="_blank" href="https://media.edweb.net/edWebinar/?view=20201020edwebnet16"
-            target="_none" style="text-decoration:none;">
+            <a id='webinarLink2' aria-labelledby='webinarLink2 webinarTitle2' target="_blank"
+              href="https://media.edweb.net/edWebinar/?view=20201020edwebnet16" target="_none"
+              style="text-decoration:none;">
               <button type="button" class="nicelyRoundedButton" style="margin:20px 6px 20px 0;">
                 Watch the EdWebinar
               </button>
             </a>
-            <a href="TD_edWeb Professional Development Webinar_2020-10-20.pptx" target="_blank" style="text-decoration:none;">
+            <a href="TD_edWeb Professional Development Webinar_2020-10-20.pptx" target="_blank"
+              style="text-decoration:none;">
               <button type="button" class="nicelyRoundedButton webinarButton">
                 Download Slides
               </button>
@@ -149,56 +194,56 @@
               This recorded edWebinar will be of interest to elementary and middle school teachers.
             </p>
           </div>
-      </div>
+        </div>
 
-      <!-- 4H -->
-      <div class='row justify-content-center pressItemContainer'>
-        <div class='col-lg-12 pressLeftContainer align-items-center'>
-          <h3 class="pressText" id='webinarTitle1'>
-            Social Media TestDrive: A Fun Online Activity to Teach Digital Citizenship
-          </h3>
-          <p class="pressText">
-            Presented by Dr. Yoon Hyung Choi, Dr. Ellen Zou, and Ms. Amanda Purington
-          </p>
-          <p class="pressText">
-            Co-hosted by Cornell University's Social Media Lab and New York State 4-H
-          </p>
-          <a id='webinarLink1' aria-labelledby='webinarLink1 webinarTitle1' href="https://www.youtube.com/watch?v=vdIRx9-XE3U"
-          target="_blank" style="text-decoration:none;">
-            <!-- <p class="pressText">Read more &rsaquo;</p> -->
-            <button type="button" class="nicelyRoundedButton webinarButton">
-              Watch the Webinar
-            </button>
-          </a>
-          <a href="TD_4-H Webinar_2020 -12-8.pptx" target="_blank" style="text-decoration:none;">
-            <button type="button" class="nicelyRoundedButton webinarButton">
-              Download Slides
-            </button>
-          </a>
-          <p class="pressText">
-            With a majority of school, afterschool, and recreational activities
-            taking place online for young people due to COVID-19, being
-            responsible citizens of the digital world has become more important
-            than ever. Youth today are motivated to explore social media, but
-            navigating it without a guide can be risky and overwhelming.
-          </p>
-          <p class="pressText">
-            In this webinar you will learn about Social Media TestDrive, an
-            educational tool created by researchers from Cornell University’s
-            Social Media Lab in collaboration with Common Sense Education. Social
-            Media TestDrive teaches key concepts of digital citizenship and allows
-            young people to navigate realistic scenarios and dilemmas they might
-            encounter as users of social media in a safe virtual environment.
-          </p>
-          <p class="pressText">
-            By the end of the session, you will be able to understand the
-            digital citizenship challenges youth face in their social media use
-            and learn how to implement Social Media TestDrive modules in your
-            program.
-          </p>
+        <!-- 4H -->
+        <div class='row justify-content-center pressItemContainer'>
+          <div class='col-lg-12 pressLeftContainer align-items-center'>
+            <h3 class="pressText" id='webinarTitle1'>
+              Social Media TestDrive: A Fun Online Activity to Teach Digital Citizenship
+            </h3>
+            <p class="pressText">
+              Presented by Dr. Yoon Hyung Choi, Dr. Ellen Zou, and Ms. Amanda Purington
+            </p>
+            <p class="pressText">
+              Co-hosted by Cornell University's Social Media Lab and New York State 4-H
+            </p>
+            <a id='webinarLink1' aria-labelledby='webinarLink1 webinarTitle1'
+              href="https://www.youtube.com/watch?v=vdIRx9-XE3U" target="_blank" style="text-decoration:none;">
+              <!-- <p class="pressText">Read more &rsaquo;</p> -->
+              <button type="button" class="nicelyRoundedButton webinarButton">
+                Watch the Webinar
+              </button>
+            </a>
+            <a href="TD_4-H Webinar_2020 -12-8.pptx" target="_blank" style="text-decoration:none;">
+              <button type="button" class="nicelyRoundedButton webinarButton">
+                Download Slides
+              </button>
+            </a>
+            <p class="pressText">
+              With a majority of school, afterschool, and recreational activities
+              taking place online for young people due to COVID-19, being
+              responsible citizens of the digital world has become more important
+              than ever. Youth today are motivated to explore social media, but
+              navigating it without a guide can be risky and overwhelming.
+            </p>
+            <p class="pressText">
+              In this webinar you will learn about Social Media TestDrive, an
+              educational tool created by researchers from Cornell University’s
+              Social Media Lab in collaboration with Common Sense Education. Social
+              Media TestDrive teaches key concepts of digital citizenship and allows
+              young people to navigate realistic scenarios and dilemmas they might
+              encounter as users of social media in a safe virtual environment.
+            </p>
+            <p class="pressText">
+              By the end of the session, you will be able to understand the
+              digital citizenship challenges youth face in their social media use
+              and learn how to implement Social Media TestDrive modules in your
+              program.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
   </main>
 
   <footer class="page-footer footerVerB">
@@ -228,8 +273,15 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
