testing donation page

--- a/donate2.html
+++ b/donate2.html
@@ -86,60 +86,43 @@
             </a>
           </li>
         </ul>
-
       </div>
     </nav>
   </header>
 
   <main>
-    <div class='container-fluid'>
-      <!-- Section Title -->
-      <div class="row justify-content-center pageSectionTitle">
-        <div class="col-sm-12 col-md-10 col-lg-10 text-center">
-          <h1> Be a Driver Too! </h1>
+    <div class="container-fluid">
+      <!-- Top Content Row -->
+      <div class="row paddedRow align-items-center">
+        <div id="donate_graphic" class="col-md-5">
+          <img id="donate_img_1" src="img/donate_5.svg" alt="">
         </div>
-      </div>
-
-      <!-- Button -->
-      <div class="row justify-content-center" style="padding:2em;">
-        <div class="col d-flex justify-content-center">
+        <div id="intro" class="col-md-7">
+          <h1>
+            Help us drive
+            <span class="blue_accent">Social Media Literacy</span>
+          </h1>
+          <h4>
+            Social Media TestDrive is made possible by friends and supporters who believe in our mission to prepare
+            young people for the online world.
+            <br>
+            <br>
+            It is a free resource, so we rely on the support from donors to fund the addition of new features and
+            continual improvements.
+            <br>
+            <br>
+            <b>Join now to support our mission! </b>
+          </h4>
           <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
             target="_blank">
-            <button type="button" class="nicelyRoundedButton">
-              Make a Donation
+            <button class="nicelyRoundedButton" type="button">
+              Make a donation
             </button>
           </a>
         </div>
       </div>
+    </div>
 
-      <!-- Subtext -->
-      <div class="row justify-content-center">
-        <div class="col-md-10 col-lg-6 text-center">
-          <h4>
-            Support the development of social media literacy skills among youth!
-          </h4>
-        </div>
-      </div>
-
-      <!-- Pictures -->
-      <div class="row justify-content-center">
-        <!-- <div id="donate_graphic" class="col-sm-4 col-md-4 col-lg-4">
-          <img id="donate_img" src="img/donate2_2.svg" alt="">
-        </div>
-        <div id="donate_graphic" class="col-sm-4 col-md-4 col-lg-4">
-          <img id="donate_img" src="img/donate2_2.svg" alt="">
-        </div>
-        <div id="donate_graphic" class="col-sm-4 col-md-4 col-lg-4">
-          <img id="donate_img" src="img/donate2_2.svg" alt="">
-        </div>
-        </div> -->
-        <div id="donate_graphic" class="col-sm-12 col-md-12 col-lg-12">
-          <img id="donate_img" src="img/donate2_3.svg" alt="">
-        </div>
-      </div>
-    </div>
-    </div>
-    </div>
   </main>
 
   <footer class="page-footer footerVerB">
