--- a/donate.html
+++ b/donate.html
@@ -77,14 +77,15 @@
               <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-heart-fill" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
               </svg> -->
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
-                <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
+                class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+                <path
+                  d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
               </svg>
               <b>Donate</b>
             </a>
           </li>
         </ul>
-
       </div>
     </nav>
   </header>
@@ -94,24 +95,41 @@
       <!-- Top Content Row -->
       <div class="row paddedRow align-items-center">
         <div id="donate_graphic" class="col-md-5">
-          <img id="donate_img_1" src="img/donate_1.svg" alt="">
+          <img id="donate_img_1" src="img/donate_5.svg" alt="">
         </div>
         <div id="intro" class="col-md-7">
           <h1>
-            Support
-            <span class="blue_accent">Social Media TestDrive</span>
+            Help us drive
+            <span class="blue_accent">social media literacy</span>
           </h1>
           <h4>
-            Social Media TestDrive is made possible by friends and supporters who believe in our mission to prepare young people for
-            the online world.
+            Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and developers at Cornell University's Social Media Lab in collaboration with Common Sense Education.
             <br>
             <br>
-            It is a free resource, so we rely on the support from donors to fund the addition of new features and continual improvements.
+            Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and developers at <img src="/img/cornell_logo.svg" width="18px" height="18px" alt="Social Media TestDrive Logo">'s Social Media Lab in collaboration with <img src="/img/cselogo.png" width="18px" height="18px" alt="Social Media TestDrive Logo">.
+            <br>
+            <br>
+            We would like to invite friends and supporters who share in our mission to prepare
+            young people for the online world, to join us drive social media literacy by financially supporting the educational tool.
+            <br>
+            <br>
+            TestDrive is a free resource to users, and your support will fund the addition of new features and
+            continual improvements.
             <br>
             <br>
             <b>Join now to support our mission! </b>
           </h4>
-          <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1' target="_blank">
+          <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top"
+            alt="Social Media TestDrive Logo">
+          <div class="d-inline-block ">
+            <img src="/img/cornell_logo.svg" width="110px" height="110px" alt="Social Media TestDrive Logo">
+            <br>
+            <img src="/img/cselogo.png" width="110px" height="110px" alt="Social Media TestDrive Logo">
+          </div>
+
+          <br>
+          <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
+            target="_blank">
             <button class="nicelyRoundedButton" type="button">
               Make a donation
             </button>
