--- a/donate.html
+++ b/donate.html
@@ -103,29 +103,22 @@
             <span class="blue_accent">social media literacy</span>
           </h1>
           <h4>
-            Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and developers at Cornell University's Social Media Lab in collaboration with Common Sense Education.
-            <br>
-            <br>
-            Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and developers at <img src="/img/cornell_logo.svg" width="18px" height="18px" alt="Social Media TestDrive Logo">'s Social Media Lab in collaboration with <img src="/img/cselogo.png" width="18px" height="18px" alt="Social Media TestDrive Logo">.
+            Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and developers at
+            <img src="/img/cornell_logo.svg" height="49px" alt="Cornell University Logo">'s Social Media Lab in
+            collaboration with <img src="/img/cselogo_line.png" height="49px" alt="Common Sense Education Logo">.
             <br>
             <br>
             We would like to invite friends and supporters who share in our mission to prepare
-            young people for the online world, to join us drive social media literacy by financially supporting the educational tool.
+            young people for the online world, to join us drive social media literacy by financially supporting the
+            educational tool.
             <br>
             <br>
             TestDrive is a free resource to users, and your support will fund the addition of new features and
             continual improvements.
             <br>
             <br>
-            <b>Join now to support our mission! </b>
+            <b>Join now to support our mission! </b> Make a donation below through Cornell University's secure donation page.
           </h4>
-          <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top"
-            alt="Social Media TestDrive Logo">
-          <div class="d-inline-block ">
-            <img src="/img/cornell_logo.svg" width="110px" height="110px" alt="Social Media TestDrive Logo">
-            <br>
-            <img src="/img/cselogo.png" width="110px" height="110px" alt="Social Media TestDrive Logo">
-          </div>
 
           <br>
           <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
