--- a/donate2.html
+++ b/donate2.html
@@ -100,23 +100,35 @@
         <div id="intro" class="col-md-7">
           <h1>
             Help us drive
-            <span class="blue_accent">Social Media Literacy</span>
+            <span class="blue_accent">social media literacy</span>
           </h1>
           <h4>
-            Social Media TestDrive is made possible by friends and supporters who believe in our mission to prepare
-            young people for the online world.
+            Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and developers at
+            Cornell University's Social Media Lab in collaboration with Common Sense Education.
             <br>
             <br>
-            It is a free resource, so we rely on the support from donors to fund the addition of new features and
+            We would like to invite friends and supporters who share in our mission to prepare
+            young people for the online world, to join us drive social media literacy by financially supporting the
+            educational tool.
+            <br>
+            <br>
+            TestDrive is a free resource to users, and your support will fund the addition of new features and
             continual improvements.
             <br>
             <br>
-            <b>Join now to support our mission! </b>
+            <b>Join now to support our mission! </b> Make a donation below through Cornell University's secure donation page.
           </h4>
+          <img src="/img/cornell_logo.svg" height="110px" alt="Cornell University Logo"
+            class="d-inline-block align-top">
+          <img src="/img/cselogo.png" height="110px" alt="Common Sense Education Logo" class="d-inline-block align-top">
+
+          <br>
           <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
             target="_blank">
-            <button class="nicelyRoundedButton" type="button">
+            <button class="donationButton" type="button">
               Make a donation
+              <br>
+              <span class="donationButton-text">(via Cornell University)</span>
             </button>
           </a>
         </div>
