New designs of donation page

--- a/donate3.html
+++ b/donate3.html
@@ -93,30 +93,41 @@
   <main>
     <div class="container-fluid">
       <!-- Top Content Row -->
-      <div class="row paddedRow align-items-center">
+      <div class="row align-items-center donationRow">
         <div id="donate_graphic" class="col-md-5">
-          <img id="donate_img_1" src="img/donate_5.svg" alt="">
+          <img id="donate_img" src="img/donate_5.svg" alt="">
         </div>
-        <div id="intro" class="col-md-7">
+        <div class="col-md-7">
           <h1>
             Help us drive
-            <span class="blue_accent">Social Media Literacy</span>
+            <span class="blue_accent">social media literacy</span>
           </h1>
           <h4>
-            Social Media TestDrive is made possible by friends and supporters who believe in our mission to prepare
+            Social Media TestDrive is created by a multidiscplinary team of researchers, designers, and developers at
+            Cornell University's <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab</a> in
+            collaboration with <a href="https://www.commonsense.org/education" target="_blank"> Common Sense
+              Education</a>, but it is made possible by friends and supporters who believe in our mission to prepare
             young people for the online world.
             <br>
             <br>
-            It is a free resource, so we rely on the support from donors to fund the addition of new features and
-            continual improvements.
+            It is a free resource, so we invite the support of donors to fund the addition of new features and continual
+            improvements.
             <br>
             <br>
             <b>Join now to support our mission! </b>
           </h4>
+          <div>
+            <img src="/img/cornell_logo.svg" height="50px" class="d-inline-block align-top donation_logos"
+              alt="Social Media TestDrive Logo">
+            <img src="/img/cselogo.png" height="50px" class="d-inline-block align-top donation_logos"
+              alt="Social Media TestDrive Logo">
+          </div>
           <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
             target="_blank">
-            <button class="nicelyRoundedButton" type="button">
+            <button class="donationButton" type="button">
               Make a donation
+              <br>
+              <span class="donationButton-text">(via Cornell University)</span>
             </button>
           </a>
         </div>
