--- a/donate4.html
+++ b/donate4.html
@@ -98,7 +98,7 @@
             <!-- Top Content Row -->
             <div class="row donationRow align-items-center">
                 <div id="donate_graphic" class="col-md-5">
-                    <img id="donate_img" src="img/donate_5.svg" alt="">
+                    <img id="donate_img" src="img/testDriveLogo.svg" width="500px" alt="Social Media TestDrive Logo">
                 </div>
                 <div class="col-md-7">
                     <h1>
@@ -107,25 +107,25 @@
                     </h1>
                     <h4>
                         Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and
-                        developers at
-                        <img src="/img/cornell_logo.svg" height="49px" alt="Cornell University">'s Social Media Lab in
-                        collaboration with
-                        <span class="avoidWrap"> <img src="/img/cselogo.png" height="49px" alt="Common Sense Education">
-                        </span>.
-                        <br> But, it is made possible by friends and supporters who believe in our mission to prepare
-                        young people for the online world.
+                        developers at Cornell University's
+                        <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab </a>
+                        in collaboration with
+                        <a href="https://www.commonsense.org/education" target="_blank">Common Sense Education</a>,
+                        but it is made possible by friends and supporters who believe in our mission to prepare young
+                        people for the online world.
                         <br>
                         <br> It is a free resource, so we invite the support of donors to fund the addition of new
                         features and continual improvements.
                         <br>
                         <br>
-                        <b>Join now to support our mission! </b> Make a donation below through Cornell University's
-                        secure donation page.
+                        <b>Join now to support our mission! </b>
                     </h4>
                     <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
                         target="_blank">
-                        <button class="nicelyRoundedButton" type="button">
+                        <button class="donationButton" type="button">
                             Make a donation
+                            <br>
+                            <span class="donationButton-text">(via Cornell University)</span>
                         </button>
                     </a>
                 </div>
