fixed donation page css

--- a/donate.html
+++ b/donate.html
@@ -107,10 +107,9 @@
                     </h1>
                     <h4>
                         Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and
-                        developers at
-                        <img src="/img/cornell_logo.svg" height="49px" alt="Cornell University">'s Social Media Lab in
-                        collaboration with
-                        <span class="avoidWrap"> <img src="/img/cselogo.png" height="49px" alt="Common Sense Education">
+                        developers <span class="avoidWrap"> at
+                        <img src="./img/cornell_logo.svg" height="49px" alt="Cornell University">'s </span>Social Media Lab in
+                        collaboration <span class="avoidWrap"> with <img src="./img/cselogo.png" height="49px" alt="Common Sense Education">
                         </span>.
                         <br> But, it is made possible by friends and supporters who believe in our mission to prepare
                         young people for the online world.
