added more prototypes of donation and team page

--- a/donate.html
+++ b/donate.html
@@ -97,7 +97,7 @@
         <div class="container-fluid">
             <!-- Top Content Row -->
             <div class="row donationRow align-items-center">
-                <div id="donate_graphic" class="col-md-5">
+                <div class="col-md-5">
                     <img id="donate_img" src="img/donate_5.svg" alt="">
                 </div>
                 <div class="col-md-7">
@@ -118,7 +118,7 @@
                         features and continual improvements.
                         <br>
                         <br>
-                        <b>Join now to support our mission! </b> Make a donation below through Cornell University's
+                        <b>Join us in supporting this mission! </b> Make a donation below through Cornell University's
                         secure donation page.
                     </h4>
                     <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
