--- a/donate2.html
+++ b/donate2.html
@@ -97,7 +97,7 @@
         <div class="container-fluid">
             <!-- Top Content Row -->
             <div class="row align-items-center donationRow">
-                <div id="donate_graphic" class="col-md-5">
+                <div class="col-md-5">
                     <img id="donate_img" src="img/donate_5.svg" alt="">
                 </div>
                 <div class="col-md-7">
@@ -108,7 +108,7 @@
                     <h4>
                         Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and
                         developers at Cornell University's
-                        <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab </a>
+                        <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab</a>
                         in collaboration with
                         <a href="https://www.commonsense.org/education" target="_blank">Common Sense Education</a>,
                         but it is made possible by friends and supporters who believe in our mission to prepare young
@@ -118,7 +118,7 @@
                         features and continual improvements.
                         <br>
                         <br>
-                        <b>Join now to support our mission! </b>
+                        <b>Join us in supporting this mission! </b>
                     </h4>
                     <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
                         target="_blank">
