--- a/donate4.html
+++ b/donate4.html
@@ -96,9 +96,9 @@
     <main>
         <div class="container-fluid">
             <!-- Top Content Row -->
-            <div class="row donationRow align-items-center">
-                <div id="donate_graphic" class="col-md-5">
-                    <img id="donate_img" src="img/testDriveLogo.svg" width="500px" alt="Social Media TestDrive Logo">
+            <div class="row align-items-center donationRow">
+                <div class="col-md-5">
+                    <img id="donate_img" src="img/donate_5.svg" alt="">
                 </div>
                 <div class="col-md-7">
                     <h1>
@@ -108,7 +108,7 @@
                     <h4>
                         Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and
                         developers at Cornell University's
-                        <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab </a>
+                        <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab</a>
                         in collaboration with
                         <a href="https://www.commonsense.org/education" target="_blank">Common Sense Education</a>,
                         but it is made possible by friends and supporters who believe in our mission to prepare young
@@ -118,14 +118,20 @@
                         features and continual improvements.
                         <br>
                         <br>
-                        <b>Join now to support our mission! </b>
+                        <b>Join us in supporting this mission! </b>
                     </h4>
                     <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
                         target="_blank">
                         <button class="donationButton" type="button">
-                            Make a donation
-                            <br>
-                            <span class="donationButton-text">(via Cornell University)</span>
+                            <div class="donationButtonAlignment">
+                                <span class="d-inline-block addLeftMargin">
+                                    Make a donation
+                                    <br>
+                                    <span class="donationButton-text">(via Cornell University)</span>
+                                </span>
+                                <img src="/img/cornell_seal.svg" width="60px" height="60px"
+                                    class="d-inline-block align-top addRightMargin" alt="Social Media TestDrive Logo">
+                            </div>
                         </button>
                     </a>
                 </div>
