--- a/donate3.html
+++ b/donate3.html
@@ -94,7 +94,7 @@
     <div class="container-fluid">
       <!-- Top Content Row -->
       <div class="row align-items-center donationRow">
-        <div id="donate_graphic" class="col-md-5">
+        <div class="col-md-5">
           <img id="donate_img" src="img/donate_5.svg" alt="">
         </div>
         <div class="col-md-7">
@@ -114,7 +114,7 @@
             improvements.
             <br>
             <br>
-            <b>Join now to support our mission! </b>
+            <b>Join us in supporting this mission! </b>
           </h4>
           <div>
             <img src="/img/cornell_logo.svg" height="50px" class="d-inline-block align-top donation_logos"
