donation button padding edit

--- a/donate4.html
+++ b/donate4.html
@@ -129,7 +129,7 @@
                                     <br>
                                     <span class="donationButton-text">(via Cornell University)</span>
                                 </span>
-                                <img src="/img/cornell_seal.svg" width="60px" height="60px"
+                                <img src="./img/cornell_seal.svg" width="60px" height="60px"
                                     class="d-inline-block align-top addRightMargin" alt="Social Media TestDrive Logo">
                             </div>
                         </button>
